--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	
 </head>
 <body>
+	<a href="agri.jpg"download>download</a>
 	<img class ="banners" src="banner.jpg" alt="banner">
 	<div class="wrapper">
 		<article class="img-info">
