--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lan="en">
 <head>
 	<meta charset="utf8">
-	<title>website basic</title>
+	<title>website basic.in</title>
+	<link href='C:\Users\HP\Downloads\html\cascade-logo' rel="SHORTCUT ICON"/>
 	<link rel="stylesheet" href="styless.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	
